/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '7.1.2' apply true
}

group = 'fr.jarven'
version = '1.5.1'
description = 'camhead'
java.sourceCompatibility = JavaVersion.VERSION_1_8

configurations{
    shadowAll
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = uri('https://repo.maven.apache.org/maven2/') }
    maven {
        name = 'spigot-repo'
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }
    maven { 
        name = 'minecraft-repo'
        url = uri('https://libraries.minecraft.net/')
    }
}

dependencies {
    implementation 'dev.jorel:commandapi-shade:8.5.0'
    implementation 'com.mojang:brigadier:1.0.17' // Paper 1.16.5 => Brigadier 1.0.17
    // shadowAll('dev.jorel:commandapi-shade:8.5.0') {
    //     transitive = true
    // }
    // shadowAll('com.mojang:brigadier:1.0.18') {
    //     transitive = true
    // }
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'com.mojang:authlib:1.5.25'
}

shadowJar {
    configurations = [project.configurations.shadowAll]
    // relocate 'com.mojang.brigadier', 'fr.jarven.camhead.lib.brigadier'
    // relocate 'dev.jorel.commandapi', 'fr.jarven.camhead.lib.commandapi'
}
